# djangofmt

./: .coderabbit.yaml  .gitignore  .mkdocs.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  dprint.json  justfile  pyproject.toml  release.sh  t2.md  untranslated-text-plan.md
.github/: zizmor.yml  (+1 more)
crates/djangofmt/: Cargo.toml
crates/djangofmt/src/: args.rs  editorconfig.rs  error.rs  fs.rs  lib.rs  line_width.rs  logging.rs  main.rs  options.rs  per_file_ignores.rs  pyproject.rs  resolver.rs  stdin.rs  test_support.rs
crates/djangofmt/src/commands/: check.rs  format.rs  format_stdin.rs  mod.rs
crates/djangofmt/tests/: cli.rs  common.rs  logging_test.rs
crates/djangofmt/tests/fmt/: conditional_forloop_tags.html  conditional_forloop_tags.snap  main.rs  malva_long_line.snap
crates/djangofmt/tests/fmt/ignore/: ignore_comment_directive.html  ignore_comment_directive_jinja.html  ignore_comment_directive_jinja.snap  ignore_file_comment_directive_jinja.html  ignore_file_comment_directive_jinja.snap  without_ignore_directive.snap
crates/djangofmt/tests/fmt/jinja/: syntax_sanity.html  syntax_sanity.snap
crates/djangofmt/tests/fmt/json/: script_json.html  script_json.snap  script_speculationrules.html  script_speculationrules.snap
crates/djangofmt/tests/fmt/malva/: css_indent.html  invalid_css_in_style_tag_unchanged.html  invalid_css_in_style_tag_unchanged.snap  long_line.html
crates/djangofmt/tests/fmt/preserve_unquoted/: config.toml  cotton_attrs.html  cotton_attrs.preserve_unquoted_attrs_off.snap  cotton_attrs.preserve_unquoted_attrs_on.snap
crates/djangofmt/tests/parse_error/: invalid_closing_tag_syntax.html  invalid_closing_tag_syntax.snap  main.rs  nested_unclosed_tags.html  nested_unclosed_tags.snap  unclosed_body_tag.snap  unclosed_div_tag.snap  unclosed_jinja_with_block.html  unclosed_jinja_with_block.snap
crates/djangofmt_benchmark/: Cargo.toml  README.md
crates/djangofmt_benchmark/benches/: formatter.rs  linter.rs  parser.rs  summary.rs  whitespace_sensitive.rs
crates/djangofmt_benchmark/resources/: README.md
crates/djangofmt_benchmark/resources/django/: 404.html  strip_tags1.html  technical_500.html
crates/djangofmt_benchmark/resources/makeplane/: project_invitation.html
crates/djangofmt_benchmark/resources/zulip/: comparison_table_integrated.html
crates/djangofmt_benchmark/src/: lib.rs
crates/djangofmt_dev/: Cargo.toml
crates/djangofmt_dev/src/: generate_all.rs  generate_docs.rs  generate_rules_table.rs  main.rs  sync_top_level.rs
crates/djangofmt_html_spec/: Cargo.toml  build.rs
crates/djangofmt_html_spec/data/: alpine-attrs.json  htmx-attrs.json
crates/djangofmt_html_spec/src/: lib.rs  types.rs
crates/djangofmt_lint/: Cargo.toml
crates/djangofmt_lint/src/: checker.rs  configuration.rs  lib.rs  lint_context.rs  noqa.rs  registry.rs  rule_group.rs  rule_selector.rs  rule_set.rs  settings.rs  violation.rs
crates/djangofmt_lint/src/fix/: apply.rs  edits.rs  mod.rs
crates/djangofmt_lint/src/rules/: form_method.rs  helpers.rs  invalid_attr_value.rs  mod.rs
crates/djangofmt_lint/src/rules/accessibility/: missing_html_lang.rs  missing_img_alt.rs  missing_img_dimensions.rs  missing_title.rs  mod.rs  table_header_missing_scope.rs
crates/djangofmt_lint/src/rules/correctness/: duplicate_block_name.rs  invalid_attr_value.rs  mod.rs  untrimmed_blocktranslate.rs
crates/djangofmt_lint/src/rules/style/: attr_value_style.rs  avoid_element.rs  document_structure.rs  empty_attr_value.rs  forbidden_attr.rs  form_action_whitespace.rs  missing_attr.rs  missing_doctype.rs  mod.rs  redundant_type_attr.rs  same_file_partial_include.rs  unsorted_tailwind_classes.rs  uppercase_form_method.rs
crates/djangofmt_lint/src/rules/suspicious/: django_static_url.rs  django_url.rs  django_url_pattern.rs  duplicate_attr.rs  empty_tag.rs  empty_tag_pair.rs  javascript_url.rs  mod.rs  suspicious_url.rs  use_https.rs
crates/djangofmt_lint/tests/: rules.rs  settings.rs
crates/djangofmt_lint/tests/check/: main.rs
crates/djangofmt_lint/tests/check/avoid_br/: avoid_br.html  avoid_br.snap
crates/djangofmt_lint/tests/check/avoid_br_tag/: avoid_br_tag.invalid.html  avoid_br_tag.invalid.snap  avoid_br_tag.valid.html
crates/djangofmt_lint/tests/check/django_static_url/: django_static_url.html  django_static_url.invalid.html  django_static_url.invalid.snap  django_static_url.snap  django_static_url.valid.html
crates/djangofmt_lint/tests/check/django_url_pattern/: django_url_pattern.html  django_url_pattern.invalid.html  django_url_pattern.invalid.snap  django_url_pattern.snap  django_url_pattern.valid.html
crates/djangofmt_lint/tests/check/duplicate_attr/: duplicate_attr.html  duplicate_attr.invalid.html  duplicate_attr.invalid.snap  duplicate_attr.snap  duplicate_attr.valid.html
crates/djangofmt_lint/tests/check/duplicate_block_name/: duplicate_block_name.invalid.html  duplicate_block_name.invalid.snap  duplicate_block_name.valid.html
crates/djangofmt_lint/tests/check/empty_attr_value/: empty_attr_value.html  empty_attr_value.invalid.fixed.snap  empty_attr_value.invalid.html  empty_attr_value.invalid.snap  empty_attr_value.snap  empty_attr_value.valid.html
crates/djangofmt_lint/tests/check/empty_tag/: empty_tag.html  empty_tag.snap
crates/djangofmt_lint/tests/check/empty_tag_pair/: empty_tag_pair.invalid.html  empty_tag_pair.invalid.snap  empty_tag_pair.valid.html
crates/djangofmt_macros/: Cargo.toml
crates/djangofmt_macros/src/: derive_message_formats.rs  lib.rs  violation_metadata.rs
crates/djangofmt_wasm/: Cargo.toml
crates/djangofmt_wasm/src/: lib.rs
crates/djangofmt_wasm/src/snapshots/: djangofmt_wasm__tests__control_flow_and_element.snap  djangofmt_wasm__tests__nested_elements_with_attributes.snap
python/ecosystem-check/: README.md  pyproject.toml
python/ecosystem-check/ecosystem_check/: __init__.py  __main__.py  check.py  cli.py  defaults.py  format.py  main.py  markdown.py  projects.py  types.py
python/ecosystem-check/ruff_ecosystem/: defaults.py
(+286 files in other folders)
