[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.2.10"
authors = ["Thibaut Decombe <thibaut.decombe@gmail.com>"]
# Please update rustfmt.toml when bumping the Rust edition
edition = "2024"
rust-version = "1.94.0"
repository = "https://github.com/UnknownPlatypus/djangofmt"
license = "MIT"

[workspace.dependencies]
anyhow = { version = "1.0.102" }
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete_command = { version = "0.6.1" }
divan = { package = "codspeed-divan-compat", version = "*" }
djangofmt_macros = { path = "crates/djangofmt_macros" }
dprint-plugin-json = { version = "0.21.3" }
editorconfig-parser = { version = "0.0.4" }
globset = { version = "0.4.18" }
ignore = { version = "0.4.25" }
insta = { version = "1.47.2", features = ["filters", "glob", "yaml"] }
insta-cmd = { version = "0.6.0" }
malva = { version = "0.16.0", features = ["config_serde"] }
markup_fmt = {
  git = "https://github.com/UnknownPlatypus/markup_fmt",
  rev = "a124844fa6783925450a48636acb1bbdd90a70fd"
}
miette = { version = "7.6.0", features = ["fancy"] }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
rayon = { version = "1.12.0" }
rstest = { version = "=0.26.1" }
rustc-hash = { version = "2.1.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5" }
similar-asserts = { version = "2.0.0" }
strum = { version = "0.28.0", features = ["derive"] }
syn = { version = "2.0" }
tempfile = { version = "3.27.0" }
thiserror = { version = "2.0.18" }
# This has to be kept in sync with src/main.rs where the allocator for the program is set.
tikv-jemallocator = { version = "0.7.0" }
toml = { version = "1.1.2" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23" }
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }
tracing-tree = { version = "0.4.1" }
tsify = { version = "0.5.6" }
wasm-bindgen = { version = "0.2.122" }
web-sys = { version = "0.3.99", features = ["console"] }

[workspace.lints.clippy]
missing_errors_doc = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
strip = true
# See python/benchmark_cargo_profiles.py
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
