[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "djangofmt"
version = "0.1.0"
description = "A fast, HTML aware, Django template formatter, written in Rust."
readme = "README.md"
keywords = [
  "Django",
]
authors = [
  { name = "Thibaut Decombe", email = "thibaut.decombe@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
]
[project.urls]
Repository = "https://github.com/UnknownPlatypus/djangofmt"

[tool.mypy]
strict = true

# https://www.maturin.rs/config.html#maturin-options
[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
include = [
  "rust-toolchain.toml",
]
