[package]
name = "djangofmt"
version.workspace = true
authors.workspace = true
edition.workspace = true
exclude = ["/tests"]
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description = "A fast, HTML aware, Django template formatter, written in Rust."

[dependencies]
djangofmt_lint = { path = "../djangofmt_lint" }
malva = { workspace = true }
markup_fmt = { workspace = true }

clap = { workspace = true }
clap_complete_command = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }

# Logging
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }

# Error reporting
miette = { workspace = true }
serde = "1.0.228"
thiserror = { workspace = true }
toml = "0.9.10"

[target.'cfg(all(not(target_os = "macos"), not(target_os = "windows"), not(target_os = "openbsd"), not(target_os = "aix"), not(target_os = "android"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "powerpc64", target_arch = "riscv64")))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
insta-cmd = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
similar-asserts = { workspace = true }
tempfile = "3.23.0"
tracing-test = { workspace = true }

[features]
use-jemalloc = ["tikv-jemallocator"]
default = ["use-jemalloc"]

[lints]
workspace = true
