[package]
name = "djangofmt"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A fast, HTML aware, Django template formatter, written in Rust."
repository.workspace = true
license.workspace = true
exclude = ["/tests"]
publish = true

[dependencies]
clap = { workspace = true }
clap-serde-derive = "0.2.1"
clap_complete_command = { workspace = true }
# Logging
colored = { workspace = true }
djangofmt_lint = { path = "../djangofmt_lint" }
malva = { workspace = true }
markup_fmt = { workspace = true }
# Error reporting
miette = { workspace = true }
rayon = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
tempfile = "3.24.0"
thiserror = { workspace = true }
toml = "0.9.11"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
insta-cmd = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
similar-asserts = { workspace = true }
tracing-test = { workspace = true }

[target.'cfg(all(not(target_os = "macos"), not(target_os = "windows"), not(target_os = "openbsd"), not(target_os = "aix"), not(target_os = "android"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "powerpc64", target_arch = "riscv64")))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[features]
default = ["use-jemalloc"]
use-jemalloc = ["tikv-jemallocator"]

[lints]
workspace = true
