[package]
name = "djangofmt_benchmark"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "djangofmt Micro-benchmarks"
repository.workspace = true
license.workspace = true
publish = false

[lib]
bench = false
doctest = false
test = false

[[bench]]
harness = false
name = "formatter"

[[bench]]
name = "whitespace_sensitive"
harness = false

[dependencies]
djangofmt = { path = "../djangofmt" }

[dev-dependencies]
css_dataset = "0.4"
cssparser = "0.34"
divan = { workspace = true }

[lints]
workspace = true
