[package]
name = "djangofmt_benchmark"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "djangofmt Micro-benchmarks"

[lib]
bench = false
test = false
doctest = false

[[bench]]
name = "formatter"
harness = false

[[bench]]
name = "whitespace_sensitive"
harness = false

[dependencies]
djangofmt = { path = "../djangofmt" }

[dev-dependencies]
css_dataset = "0.4"
cssparser = "0.34"
divan = { workspace = true }

[lints]
workspace = true
