[package]
name = "djangofmt_benchmark"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "djangofmt Micro-benchmarks"
repository.workspace = true
license.workspace = true
publish = false

[lib]
bench = false
doctest = false
test = false

[[bench]]
harness = false
name = "formatter"

[dependencies]
djangofmt = { path = "../djangofmt" }

[dev-dependencies]
divan = { workspace = true }

[lints]
workspace = true
