[package]
name = "djangofmt_dev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
djangofmt = { path = "../djangofmt", default-features = false }
djangofmt_lint = { path = "../djangofmt_lint" }
strum = { workspace = true, features = ["derive"] }

[lints]
workspace = true
