[package]
name = "djangofmt_html_spec"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTML specification data for djangofmt linting"

[dependencies]
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
phf_codegen = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[lints]
workspace = true
