[package]
name = "djangofmt_lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
test = false

[dependencies]
markup_fmt = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
