[package]
name = "djangofmt_lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
djangofmt_macros = { workspace = true }
markup_fmt = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
