[package]
name = "djangofmt_macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = {
  workspace = true,
  features = ["derive", "extra-traits", "full", "parsing"]
}

[lints]
workspace = true
