[package]
name = "djangofmt_wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "WASM bindings for djangofmt"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
djangofmt = { path = "../djangofmt" }
djangofmt_lint = { path = "../djangofmt_lint" }
markup_fmt = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }

[lints]
workspace = true
