[package]
name = "djangofmt_wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "WASM bindings for djangofmt"
repository.workspace = true
license.workspace = true
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# getrandom is declared (wasm target only, below) solely to turn on its `wasm_js` feature;
# it's never referenced in our code, so cargo-shear must be told it is intentionally unused.
[package.metadata.cargo-shear]
ignored = ["getrandom"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
djangofmt = { path = "../djangofmt" }
djangofmt_lint = { path = "../djangofmt_lint" }
markup_fmt = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
tsify = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

# getrandom reaches the wasm build transitively (rustywind_core -> ahash) and refuses to
# compile for wasm32-unknown-unknown unless its Web Crypto backend is selected. Enabling the
# `wasm_js` feature is enough since getrandom 0.3.4 (the feature now selects the backend on its
# own, so no `getrandom_backend="wasm_js"` cfg is needed).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[lints]
workspace = true
