[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecosystem-check"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["unidiff==0.7.5", "tomli_w==1.1.0", "tomli==2.2.1"]

[project.scripts]
ecosystem-check = "ecosystem_check.cli:entrypoint"

[tool.ruff.lint]
extend-select = ["I"]
preview = true
