[project]
name = "djangofmt-ecosystem-check"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "djade==1.7.0",
  "tomli==2.4.0",
  "tomli_w==1.2.0",
  "unidiff==0.7.5",
]

[project.scripts]
ecosystem-check = "ecosystem_check.cli:entrypoint"

[tool.ruff]
unsafe-fixes = true
fix = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle (error)
  "F",  # pyflakes
  "B",  # bugbear
  "B9",
  "C4",  # flake8-comprehensions
  "SIM",  # flake8-simplify
  "I",  # isort
  "UP",  # pyupgrade
  "PIE",  # flake8-pie
  "PGH",  # pygrep-hooks
  "PYI",  # flake8-pyi
  "RUF",  # Ruff specific
]
ignore = ["E501"]
preview = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
